--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,9 @@ cython_debug/
 
 .DS_Store
 .vscode
+
+# Ignore folders and files for future classes
+alignment/*
+expectation/*
+classification/*
+introduction/example_data/Partitura_tutorial_old.ipynb
