--- a/environment.yml
+++ b/environment.yml
@@ -10,11 +10,12 @@ dependencies:
   - Cython==3.0.0
   - matplotlib==3.7.2
   - numpy==1.26.0
-  - pytorch==2.1.0
-  - scipy==1.11.1
+  - scipy==1.13.1
   - tqdm==4.65.0
   - pip==23.2.1
-  - scikit-learn==1.2.2
+  - pytorch
+  - torchvision
+  - scikit-learn==1.5.1
   - jupyter==1.0.0
   - ipython==8.15.0
   - pandas==2.0.3
