--- a/.gitignore
+++ b/.gitignore
@@ -194,4 +194,5 @@ classification/scores_composer_identification
 classification/scores_difficulty_estimation
 classification/*.zip
 classification/*.pth
+generation_dl/
 
